@@ -1,7 +1,17 @@
 Version 1.9.1
 - CHG: static linking to CRT and MFC. (Stefan)
-- FIX: When Aero dialogs are disabled, the merge dlg
+- CHG: Allow the SubWCRevCOM object to be reused, i.e.
+       clear all gathered data when GetWCInfo2() is
+       called. (Stefan)
+- BUG: When Aero dialogs are disabled, the merge dlg
        background was painted black. (Stefan)
+- BUG: SubWCRev segfaulted when started for a
+       non-wc path. (Stefan)
+- BUG: TMerge showed filtered diffs if "show whitespaces"
+       was active. (Stefan)
+- BUG: TMerge could mark the wrong line as changed if the
+       files contained mixed newlines at the start of
+       the files. (Stefan)
 
 Version 1.9.0
 See the release notes here:
